Minor tweak to case-study-block--large to fix text alignment on new services page

--- a/assets/scss/components/_case-study-block--large.scss
+++ b/assets/scss/components/_case-study-block--large.scss
@@ -181,7 +181,7 @@
     &#{$self}--align-right {
       #{$self}__content {
         margin-left: 0;
-        margin-right: calc(50% + 6.3rem);
+        margin-right: calc(50% + 7.3rem);
       }
 
       #{$self}__background {
